--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FixEngine">
-        <activity android:name=".SignupActivity"></activity>
+        <activity android:name=".TradeOptionStatusPortofolioActivity"></activity>
+        <activity android:name=".SubmitOrderActivity" />
+        <activity android:name=".MainActivityPage" />
+        <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
